--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,5 +18,5 @@ jobs:
       run: cd docker/ && docker build . --file Dockerfile --tag static-php
     - name: Push binary into new branch
       run: |
-        mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ -it static-php cp php-dist/bin/php /dist/
+        mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ static-php cp php-dist/bin/php /dist/
         ./action-deploy.sh
