--- a/.github/workflows/php-7.2.yml
+++ b/.github/workflows/php-7.2.yml
@@ -26,7 +26,7 @@ jobs:
         run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=7.2.34
       - name: Push PHP 7.2.34 arm to dist
         run: |
-          mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ static-php-arm cp php-dist/bin/php /dist/
+          docker run --rm -v $(pwd)/dist:/dist/ static-php-arm cp php-dist/bin/php /dist/
           cd dist && tar -zcvf "php-7.2.34-static-bin-aarch64.tar.gz" ./php && rm ./php
       - name: Deploy to Zhamao Server
         uses: easingthemes/ssh-deploy@main
