--- a/.github/workflows/build-php.yml
+++ b/.github/workflows/build-php.yml
@@ -18,7 +18,7 @@ jobs:
           mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ static-php cp php-dist/bin/php /dist/
           cd dist && tar -zcvf "php-7.2.34-static-bin-x86_64.tar.gz" ./php && rm ./php
       - name: Change Dockerfile to aarch64
-        run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-edge/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
+        run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-v3.14/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - name: Build PHP 7.2.34 arm
         run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=7.2.34
       - name: Push PHP 7.2.34 arm to dist
@@ -46,7 +46,7 @@ jobs:
           mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ static-php cp php-dist/bin/php /dist/
           cd dist && tar -zcvf "php-7.3.30-static-bin-x86_64.tar.gz" ./php && rm ./php
       - name: Change Dockerfile to aarch64
-        run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-edge/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
+        run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-v3.14/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - name: Build PHP 7.3.30 arm
         run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=7.3.30
       - name: Push PHP 7.3.30 arm to dist
@@ -74,7 +74,7 @@ jobs:
           mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ static-php cp php-dist/bin/php /dist/
           cd dist && tar -zcvf "php-7.4.23-static-bin-x86_64.tar.gz" ./php && rm ./php
       - name: Change Dockerfile to aarch64
-        run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-edge/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
+        run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-v3.14/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - name: Build PHP 7.4.23 arm
         run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=7.4.23
       - name: Push PHP 7.4.23 arm to dist
@@ -102,7 +102,7 @@ jobs:
           mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ static-php cp php-dist/bin/php /dist/
           cd dist && tar -zcvf "php-8.0.10-static-bin-x86_64.tar.gz" ./php && rm ./php
       - name: Change Dockerfile to aarch64
-        run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-edge/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
+        run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-v3.14/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - name: Build PHP 8.0.10 arm
         run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=8.0.10
       - name: Push PHP 8.0.10 arm to dist
