--- a/.github/workflows/build-php.yml
+++ b/.github/workflows/build-php.yml
@@ -8,11 +8,11 @@ on:
 
 jobs:
   build-72:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - name: Build PHP 7.2.34
-        run: cd docker/ && docker build . --file Dockerfile --tag static-php --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=7.2.34
+        run: cd docker/ && docker build . --file Dockerfile --tag static-php --build-arg USE_BACKUP_ADDRESS=no --build-arg COMPILE_PHP_VERSION=7.2.34
       - name: Push PHP 7.2.34 to dist
         run: |
           mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ static-php cp php-dist/bin/php /dist/
@@ -20,7 +20,7 @@ jobs:
       - name: Change Dockerfile to aarch64
         run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-v3.14/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - name: Build PHP 7.2.34 arm
-        run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=7.2.34
+        run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=no --build-arg COMPILE_PHP_VERSION=7.2.34
       - name: Push PHP 7.2.34 arm to dist
         run: |
           docker run --rm -v $(pwd)/dist:/dist/ static-php-arm cp php-dist/bin/php /dist/
@@ -36,11 +36,11 @@ jobs:
           REMOTE_USER: ${{ secrets.DEPLOY_SERVER_USER }}
           TARGET: ${{ secrets.DEPLOY_SERVER_TARGET }}
   build-73:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - name: Build PHP 7.3.31
-        run: cd docker/ && docker build . --file Dockerfile --tag static-php --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=7.3.31
+        run: cd docker/ && docker build . --file Dockerfile --tag static-php --build-arg USE_BACKUP_ADDRESS=no --build-arg COMPILE_PHP_VERSION=7.3.31
       - name: Push PHP 7.3.31 to dist
         run: |
           mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ static-php cp php-dist/bin/php /dist/
@@ -48,7 +48,7 @@ jobs:
       - name: Change Dockerfile to aarch64
         run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-v3.14/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - name: Build PHP 7.3.31 arm
-        run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=7.3.31
+        run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=no --build-arg COMPILE_PHP_VERSION=7.3.31
       - name: Push PHP 7.3.31 arm to dist
         run: |
           docker run --rm -v $(pwd)/dist:/dist/ static-php-arm cp php-dist/bin/php /dist/
@@ -64,11 +64,11 @@ jobs:
           REMOTE_USER: ${{ secrets.DEPLOY_SERVER_USER }}
           TARGET: ${{ secrets.DEPLOY_SERVER_TARGET }}
   build-74:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - name: Build PHP 7.4.25
-        run: cd docker/ && docker build . --file Dockerfile --tag static-php --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=7.4.25
+        run: cd docker/ && docker build . --file Dockerfile --tag static-php --build-arg USE_BACKUP_ADDRESS=no --build-arg COMPILE_PHP_VERSION=7.4.25
       - name: Push PHP 7.4.25 to dist
         run: |
           mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ static-php cp php-dist/bin/php /dist/
@@ -76,7 +76,7 @@ jobs:
       - name: Change Dockerfile to aarch64
         run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-v3.14/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - name: Build PHP 7.4.25 arm
-        run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=7.4.25
+        run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=no --build-arg COMPILE_PHP_VERSION=7.4.25
       - name: Push PHP 7.4.25 arm to dist
         run: |
           docker run --rm -v $(pwd)/dist:/dist/ static-php-arm cp php-dist/bin/php /dist/
@@ -92,11 +92,11 @@ jobs:
           REMOTE_USER: ${{ secrets.DEPLOY_SERVER_USER }}
           TARGET: ${{ secrets.DEPLOY_SERVER_TARGET }}
   build-80:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
       - name: Build PHP 8.0.12
-        run: cd docker/ && docker build . --file Dockerfile --tag static-php --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=8.0.12
+        run: cd docker/ && docker build . --file Dockerfile --tag static-php --build-arg USE_BACKUP_ADDRESS=no --build-arg COMPILE_PHP_VERSION=8.0.12
       - name: Push PHP 8.0.12 to dist
         run: |
           mkdir dist && docker run --rm -v $(pwd)/dist:/dist/ static-php cp php-dist/bin/php /dist/
@@ -104,7 +104,7 @@ jobs:
       - name: Change Dockerfile to aarch64
         run: cd docker/ && sed -ie 's/alpine:latest/multiarch\/alpine:aarch64-v3.14/g' Dockerfile && docker run --rm --privileged multiarch/qemu-user-static:register --reset
       - name: Build PHP 8.0.12 arm
-        run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=yes --build-arg COMPILE_PHP_VERSION=8.0.12
+        run: cd docker/ && docker build . --file Dockerfile --tag static-php-arm --build-arg USE_BACKUP_ADDRESS=no --build-arg COMPILE_PHP_VERSION=8.0.12
       - name: Push PHP 8.0.12 arm to dist
         run: |
           docker run --rm -v $(pwd)/dist:/dist/ static-php-arm cp php-dist/bin/php /dist/
